--- a/RestoranClient/appsettings.json
+++ b/RestoranClient/appsettings.json
@@ -1,3 +1,5 @@
 {
-
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=192.168.10.20;Initial Catalog=Restorant;Persist Security Info=True;User ID=sa;Password=Aa12345678"
+  }
 }
