--- a/RestoranClient/appsettings.json
+++ b/RestoranClient/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=192.168.10.20;Initial Catalog=Restorant;Persist Security Info=True;User ID=sa;Password=Aa12345678"
+    "DefaultConnection": "Data Source=192.168.10.20;Initial Catalog=RestorantNew;Persist Security Info=True;User ID=sa;Password=Aa12345678"
   }
 }
