--- a/RestoranClient/RestoranClient.csproj
+++ b/RestoranClient/RestoranClient.csproj
@@ -27,6 +27,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="favicon.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
