--- a/RestoranClient/appsettings.json
+++ b/RestoranClient/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=desktop-bu8vu83\\sqlexpress;Initial Catalog=Restoran;Integrated Security=True"
+    "DefaultConnection": "Data Source=desktop-bu8vu83\\sqlexpress;Initial Catalog=Restorant;Integrated Security=True"
   }
 }
